--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,12 +22,15 @@ jobs:
         run: |
           docker build \
             -t ${{ secrets.DOCKERHUB_USERNAME }}/vbstaff-frontend:${{ github.ref_name }} \
+            -t ${{ secrets.DOCKERHUB_USERNAME }}/vbstaff-frontend:latest \
+
             -f Dockerfile \
             .
 
       - name: Push Docker image (frontend)
         run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/vbstaff-frontend:${{ github.ref_name }}
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/vbstaff-frontend:latest
 
       - name: Notify Watchtower
         run: |
